--- a/art/index.html
+++ b/art/index.html
@@ -27,18 +27,28 @@
             <a href="../index.html">back</a>
         </div>
 		<div id="toptextsmaller">
-			<p>photos i took (usually using my phone)</p>
+			<p>digital art stuff i make for my instagram</p>
 		</div>
 		<div class="album">
-			<img src="../assets/photo1.jpg" alt="museum photo" style="width:65%;height:auto;">
+			<img src="../assets/ring.png" alt="museum photo" style="width:50%;height:auto;">
 		</div>
         <div class="album">
-            <img src="../assets/photo2.jpg" alt="museum photo of clothing" style="width:35%;height:auto;">
-        </div>
+			<img src="../assets/light.png" alt="museum photo" style="width:50%;height:auto;">
+		</div>
         <div class="album">
-            <img src="../assets/photo3.jpg" alt="museum photo of exhibit" style="width:65%;height:auto;">
-        </div>
-            
+			<img src="../assets/foggy_forest.png" alt="museum photo" style="width:50%;height:auto;">
+		</div>
+        <div class="album">
+			<img src="../assets/aurora.png" alt="museum photo" style="width:50%;height:auto;">
+		</div>
+        <div class="album">
+			<img src="../assets/locket.png" alt="museum photo" style="width:50%;height:auto;">
+		</div>
+        <div class="album">
+			<img src="../assets/angel_bg.png" alt="museum photo" style="width:50%;height:auto;">
+		</div>
+
+
 </html>
 </html>
 <!-- Initiate AOS-->
