--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 			<p>fros<strong>t</strong><br>[she/they]</p>
 		</div>
 		<div id="toptextsmaller">
-			<p>toki! lipu ilo ni li lon tawa mi.</p>
+			<p>hii welcome to my website :D</p>
 		</div>
 		</div>
 		<div id="toptextsmaller">
-			<a href= "./soc/index.html"> mi sona </a> • <a href= "./photos/index.html"> mute sitelen </a> • <a href= "./webex/index.html"> lipu ilo pona mute </a> • <a href= "./vrc/index.html"> vrchat/unity ijo </a>
+			<a href= "./soc/index.html">socials</a> • <a href= "./photos/index.html">fotos</a> • <a href= "./webex/index.html">cool websites</a> • <a href= "./vrc/index.html">vrchat/unity stuff</a>
 		</div>
 		<div id="toptextsmallest">
 			<img src="./assets/cat1.jpg" height="150" width="auto" >
