--- a/soc/index.html
+++ b/soc/index.html
@@ -25,8 +25,9 @@
 	<body onload="document.body.style.opacity='1'">
         <div id="toptext">
             <div id="links">
-                <a href="../index.html">monsi</a>
+                <a href="../index.html">back</a>
             </div>
+        </div>
             <div id="text">
                 <p class="italic">discord - frost#1633</p>
             </div>
@@ -39,7 +40,6 @@
             <ul id="links" class="links">
                 <li> <a href="https://github.com/frostxyz-bit" target="_blank" rel="noopener noreferrer">/github/</a> </li>
             </ul>
-            </div>
             <div id="text">
                 <p class="italic">reddit - xFRxSTx</p> 
             </div>
