--- a/vrc/index.html
+++ b/vrc/index.html
@@ -24,7 +24,7 @@
 	<!-- Start of socials list-->
 	<body onload="document.body.style.opacity='1'">
         <div id="toptext">
-            <a href="../index.html">monsi</a>
+            <a href="../index.html">back</a>
         </div>
 		<div id="toptextsmaller">
 		</div>
