--- a/webex/index.html
+++ b/webex/index.html
@@ -24,10 +24,10 @@
 	<!-- Start of socials list-->
 	<body onload="document.body.style.opacity='1'">
         <div id="toptext">
-            <a href="../index.html">monsi</a>
+            <a href="../index.html">back</a>
         </div>
 		<div id="toptextsmaller">
-			<p>lipu ilo pona</p>
+			<p>cool websites i hav found</p>
 		</div>
         <div id="toptextsmallest">
             <a href="https://wiby.me/">wiby.me - a search engine for the old web</a>
