--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</div>
 		</div>
 		<div id="toptextsmaller">
-			<a href= "./soc/index.html">socials</a> • <a href= "./photos/index.html">fotos</a> • <a href= "./webex/index.html">cool websites</a> • <a href= "./vrc/index.html">vrchat/unity stuff</a>
+			<a href= "./soc/index.html">socials</a> • <a href="./art/index.html">art</a> • <a href= "./photos/index.html">fotos</a> • <a href= "./webex/index.html">cool websites</a> • <a href= "./vrc/index.html">vrchat/unity stuff</a>
 		</div>
 		<div id="toptextsmallest">
 			<img src="./assets/cat1.jpg" height="150" width="auto" >
