--- a/art/index.html
+++ b/art/index.html
@@ -30,6 +30,12 @@
 			<p>digital art stuff i make for my instagram</p>
 		</div>
 		<div class="album">
+			<img src="../assets/bird_final.png" alt="museum photo" style="width:50%;height:auto;">
+		</div>
+		<div class="album">
+			<img src="../assets/deer_throwaway.png" alt="museum photo" style="width:50%;height:auto;">
+		</div>
+		<div class="album">
 			<img src="../assets/ring.png" alt="museum photo" style="width:50%;height:auto;">
 		</div>
         <div class="album">
