--- a/wx/index.html
+++ b/wx/index.html
@@ -42,6 +42,16 @@
             <embed src="../assets/metar.pdf" width="25%" height="500" type="application/pdf">
         </div>
         <div class="album">
+            <iframe src="https://control.videolinq.com/public/eLmGC3P9" style="width:25%;height:500px;"></iframe>
+            <iframe src="https://control.videolinq.com/public/CW8qXpTI" style="width:25%;height:500px;"></iframe>
+            <iframe src="https://control.videolinq.com/public/AkPKWcgi" style="width:25%;height:500px;"></iframe>
+        </div>
+        <div class="album">
+            <img src="../assets/cam1.jpg" style="width:25%;height:auto;">
+            <img src="../assets/cam2.jpg" style="width:25%;height:auto;">
+            <img src="../assets/cam3.jpg" style="width:25%;height:auto;">
+        </div>
+        <div class="album">
             <img src="https://origin.wpc.ncep.noaa.gov/NationalForecastChart/staticmaps/noaad1.png" style="width:45%;height:auto;">
             <img src="https://origin.wpc.ncep.noaa.gov/NationalForecastChart/staticmaps/noaad2.png" style="width:45%;height:auto;">
         </div>
